# perf_stuff

./: .clang-format  .clangd  .cmake-format.py  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  README.md  compile_commands.json
cmake/: gnu-toolchain.cmake
examples/: CMakeLists.txt  bm_modulo.cpp  bm_sorted.cpp  loop_tester_example.cpp  nasm_add.asm  nasm_add.cpp  profiler_example.cpp  profiler_example_modulo.cpp
hardware_tests/execution/: CMakeLists.txt  asm_bm_dep_chains.asm  asm_bm_dep_chains.cpp  asm_bm_frontend.asm  asm_bm_frontend.cpp  asm_bm_ilp.asm  asm_bm_ilp.cpp  bm_branch.cpp  mca.asm
hardware_tests/memory/: CMakeLists.txt  bm_cache_line_sz.cpp  bm_cache_line_sz_result.csv  bm_cache_random_write.cpp  bm_cache_sequ_write.cpp  bm_cache_sequ_write_perf.cpp  page_faults.cpp
hardware_tests/memory/python/: mem_usage.py
include/: linux_stuff.hpp  loop_tester.hpp  profiler.hpp  utils.hpp
src/: CMakeLists.txt  linux_stuff.cpp  loop_tester.cpp  profiler.cpp
